<resources>
    <string name="app_name">Rutas CR</string>
    <string name="google_api_key">AIzaSyAhoeSsQdd0bV6P7eRJLNdT1DW83unihfk</string>

    <!--String menuActivity-->
    <string name="lbl_search_route">Buscar Rutas</string>
    <string name="lbl_pre_route">Rutas Prediseñadas</string>
    <string name="lbl_nav_login">Iniciar Sesión</string>
    <string name="lbl_register">Registro</string>
    <string name="lbl_title_user">Usuarios</string>
    <string name="lbl_title">Rutas Recomendadas</string>
    <string name="btn_buscar">Buscar Rutas</string>
    <string name="lbl_main">Inicio</string>

    <!--String loginActivity-->
    <string name="lbl_user_login">Usuario</string>
    <string name="lbl_password_login">Contraseña</string>
    <string name="btn_accept_login">Ingresar</string>
    <string name="lbl_registry_login">¿Aún no tienes cuenta?</string>
    <string name="btn_registry_login">Registrarse</string>
    <!-- -->

    <!--String RegistryActivity-->
    <string name="lbl_user_registry">Usuario</string>
    <string name="lbl_password_registry">Contraseña</string>
    <string name="btn_accept_registry_">Registrarse</string>
    <string name="lbl_name_registry">Nombre completo</string>
    <string name="lbl_email_registry">Correo electrónico</string>
    <string name="lbl_province_registry">Provincia</string>
    <string name="lbl_canton_registry">Cantón</string>
    <string name="lbl_district_registry">Distrito</string>
    <string name="lbl_sing_out">Cerrar sesión</string>
    <string name="lbl_welcome_client">Inicio cliente</string>
    <string name="lbl_routes_client">Mis rutas</string>
    <string name="lbl_login">Login</string>
    <!-- -->

    <!--String SearchDestinationActivity-->
    <string name="lbl_partida_search">Punto de partida</string>
    <string name="lbl_price_search">Precio</string>
    <string name="lbl_distancia_search">Distancia</string>
    <string name="lbl_duracion_search">Duración</string>
    <string name="lbl_actividad_search">Actividad</string>
    <string name="btn_search_search">Buscar</string>
    <!-- -->

    <string name="btn_view_car">Ver</string>

    <string name="lbl_tittle_site">Sitio 1</string>
    <string name="lbl_description_site">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab</string>

    <string name="lbl_name_site">Nombre de la ruta</string>
    <string name="btn_add_site">Agregar</string>
    <string name="btn_delete_site">Eliminar</string>
    <string name="btn_create_route">Crear</string>
    <string name="btn_modify_route">Modificar</string>
    <string name="btn_view_video">Ver video</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--String Titles Activities-->
    <string name="title_activity_menu">RutasCR</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
