<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search_route"
            android:icon="@drawable/search_filled_50"
            android:title="@string/lbl_search_route" />
        <item
            android:id="@+id/nav_pre_route"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/lbl_pre_route" />
    </group>

    <item android:title="@string/lbl_title_user">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/user_48"
                android:title="@string/lbl_nav_login" />
            <item
                android:id="@+id/nav_register"
                android:icon="@drawable/user_folder_48"
                android:title="@string/lbl_register" />
        </menu>
    </item>

</menu>
