<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mjb.projectexperts.NewSiteActivity">

    <LinearLayout
        android:id="@+id/area_name_route"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_client2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/home_48" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp">

            <EditText
                android:id="@+id/txtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/lbl_name_site"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/area_typeActivity"
        android:layout_below="@+id/area_name_route"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spinner_typeActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_typeActivity_search"
            android:textColorHint="@color/colorPrimary"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/area_sites_add"
        android:layout_below="@+id/area_name_route"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="horizontal">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:scrollbars="vertical" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_accept_create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:drawableLeft="@drawable/create_new_52"
            android:text="@string/btn_create_route"
            android:textColor="@android:color/white" />
        <Button
            android:id="@+id/btn_accept_modify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:drawableLeft="@drawable/create_new_52"
            android:text="@string/btn_modify_route"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>
